--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
         <script src="/resources/vendor/doT.min.js"></script>
         <script src="/resources/vendor/highlight/highlight.pack.js"></script>
         <script src="/resources/js/index.js"></script>
+        
+        <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+        <link rel="manifest" href="/icons/site.webmanifest">
+        <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#0e0e0f">
+        <link rel="shortcut icon" href="/icons/favicon.ico">
+        <meta name="msapplication-TileColor" content="#0e0e0f">
+        <meta name="msapplication-config" content="/icons/browserconfig.xml">
+        <meta name="theme-color" content="#0e0e0f">
+        
+        <title>CC-Tweaked Peripheral APIs | xiomi.org</title>
     </head>
 
     <body>
