Adding a scroll to top button to the html file with js and styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="/resources/vendor/doT.min.js"></script>
         <script src="/resources/vendor/highlight/highlight.pack.js"></script>
         <script src="/resources/js/index.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -17,11 +18,12 @@
         <meta name="msapplication-TileColor" content="#0e0e0f">
         <meta name="msapplication-config" content="/icons/browserconfig.xml">
         <meta name="theme-color" content="#0e0e0f">
-        
+
         <title>CC-Tweaked Peripheral APIs | xiomi.org</title>
     </head>
 
     <body>
+        <div class="body">
         <div class="sidebar">
             <div class="inner" id="sidebar-insert">
                 <h2 class="header" style="padding: 20px;">API Index</h2>
@@ -38,6 +40,12 @@
 
             <div id="content-inject"></div>
 
+        </div>
+        </div>
+        <div class="scroll-to-top">
+            <svg style="width:35px;height:35px" viewBox="0 0 24 24">
+                <path fill="white" d="M12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22M12,7L7,12H10V16H14V12H17L12,7Z" />
+            </svg>
         </div>
     </body>
 
